2010-01-04  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-bs-mime-part.c
	(tny_camel_bs_mime_part_get_content_type_default): content type is
	no longer cached in capital letters

2009-12-22  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/bs/bodystruct.c: set proper part_spec
	of root part (it's empty, not "1").

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.c,
	libtinymail-camel/tny-camel-bs-msg-receive-strategy.c:
	properly handle stored parts with part_spec == "" (as root part spec)

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.c:
	detect properly also TEXT stored mime parts in bodystruct.

	* libtinymail-camel/camel-lite/bs/bodystruct.c: also
	consider VIDEO mime types with file/attachment format.

2009-12-21  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-bs-mime-part.c: fix
	fetching properly the headers of message/rfc822 attachments
	on fetching the bodystructure.

	* libtinymail-camel/tny-camel-mime-part.c: properly fetch the
	children messages when the message comes from IMAP bodystructure.

	* libtinymail-camel/tny-camel-bs-msg-receive-strategy.c:
	fetch the message/rfc822 contents using part.TEXT in
	IMAP request.

	* libtinymail-camel/tny-camel-bs-mime-part.c: properly decode
	filename field.

	* libtinymail-camel/tny-camel-bs-mime-part.c
	(..._get_decoded_stream_default): properly decode text/plain
	messages as utf8.

2009-12-18  Sergio Villar Senin  <svillar@igalia.com>

	* camel/providers/pop3/camel-pop3-folder.c (pop3_sync): protect
	the call to camel_pop3_store_expunge

	* camel/providers/pop3/camel-pop3-store.c
	(camel_pop3_store_expunge): do not perform a sync if we're offline

2009-12-18  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-maemo/tny-maemo-conic-device.c (conic_emit_status)
	(tny_maemo_conic_device_instance_init)
	(tny_maemo_conic_device_finalize): do not issue pending