@@ -3,6 +3,9 @@
 	* libtinymail-camel/tny-camel-bs-mime-part.c
 	(tny_camel_bs_mime_part_get_content_type_default): content type is
 	no longer cached in capital letters
+	(decode_async_thread):
+	(fetch_part): if the content type is text then do not use
+	BINARY
 
 2009-12-22  Jose Dapena Paz  <jdapena@igalia.com>
 
